testData/org/elixir_lang/inspection/keywords_not_at_end_test_case/NoParenthesesWithMatchedDotMatchedCallOperationInMiddle.ex
one one_one,
    OneTwo.two positional, <error descr="Keywords appear before the end of list.  Move keywords after positional arguments.">key: value</error>,
    one_three
